# xz-decom

./: .gitmodules  Cargo.toml  LICENSE-MIT  README.md  index.html
doc/: search-index.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/marker/: trait.Copy.js
doc/implementors/std/error/: trait.Error.js
doc/src/libc/: lib.rs.html
doc/src/xz_decom/: lib.rs.html
doc/src/xz_embedded_sys/: lib.rs.html
doc/xz_decom/: fn.decompress.html  index.html  sidebar-items.js  struct.XZError.html
src/: lib.rs
tests/: tests.rs
xz-embedded-sys/: Cargo.toml  build.rs  lib.rs
