[package]
name = "xz-embedded-sys"
version = "0.1.1"
authors = ["Andrew Chin <achin@eminence32.net>"]
build = "build.rs"
links = "xzembedded"
description = "Bindings to xz-embedded, a simple decompression-only xz impl"
keywords = ["xz", "decompress", "xz-embedded"]
repository = "https://github.com/eminence/xz-decom"
documentation = "https://eminence.github.io/xz-decom/doc/xz_embedded_sys/index.html"
license = "MIT OR Apache-2.0"

[dependencies]
libc = "0.1"

[build-dependencies]
gcc = "0.3"

[lib]
name = "xz_embedded_sys"
path = "lib.rs"
